--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 dotenv = "0.15.0"
+ed25519 = "2.2.3"
+russh = "0.54.6"
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
